// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Readable renders fine renders child unaltered 1`] = `
<Readable>
  <div
    data-pie-readable={true}
    key=".0"
  >
    text
  </div>
</Readable>
`;

exports[`Readable renders fine renders children unaltered 1`] = `
<Readable>
  <div
    data-pie-readable={true}
    key=".0"
  >
    <div>
      text1
    </div>
    <div>
      text2
    </div>
  </div>
</Readable>
`;

exports[`Readable renders fine renders even with specific true tag 1`] = `
<Readable
  false={true}
>
  <div
    data-pie-readable={false}
    key=".0"
  >
    <div>
      text1
    </div>
    <div>
      text2
    </div>
  </div>
</Readable>
`;

exports[`Readable renders fine renders with false tag 1`] = `
<Readable
  false={true}
>
  <div
    data-pie-readable={false}
    key=".0"
  >
    <div>
      text1
    </div>
    <div>
      text2
    </div>
  </div>
</Readable>
`;
